--- a/CodeGeneratro_DataAccess/CodeGenerator_DataAccess.csproj
+++ b/CodeGeneratro_DataAccess/CodeGenerator_DataAccess.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="clsCodeGeneratorData.cs" />
     <Compile Include="clsDataAccessSettings.cs" />
+    <Compile Include="clsLogError.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
