--- a/CodeGenerator/Code Generator.csproj
+++ b/CodeGenerator/Code Generator.csproj
@@ -80,7 +80,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="CodeGenerator_Business\CodeGenerator_Business.csproj">
+    <ProjectReference Include="..\CodeGenerator_Business\CodeGenerator_Business.csproj">
       <Project>{1ee78a04-06f0-4000-9fe5-49f1f832657b}</Project>
       <Name>CodeGenerator_Business</Name>
     </ProjectReference>
