--- a/CodeGenerator_DataAccess/CodeGenerator_DataAccess.csproj
+++ b/CodeGenerator_DataAccess/CodeGenerator_DataAccess.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{704B5107-280E-42F3-BE08-50759A98F090}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CodeGeneratro_DataAccess</RootNamespace>
-    <AssemblyName>CodeGeneratro_DataAccess</AssemblyName>
+    <RootNamespace>CodeGenerator_DataAccess</RootNamespace>
+    <AssemblyName>CodeGenerator_DataAccess</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -43,7 +44,8 @@
   <ItemGroup>
     <Compile Include="clsCodeGeneratorData.cs" />
     <Compile Include="clsDataAccessSettings.cs" />
-    <Compile Include="clsLogError.cs" />
+    <Compile Include="clsErrorLogger.cs" />
+    <Compile Include="clsLogHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
