--- a/CodeGeneratorBusiness/CodeGeneratorBusiness.csproj
+++ b/CodeGeneratorBusiness/CodeGeneratorBusiness.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{704B5107-280E-42F3-BE08-50759A98F090}</ProjectGuid>
+    <ProjectGuid>{1EE78A04-06F0-4000-9FE5-49F1F832657B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CodeGenerator_DataAccess</RootNamespace>
-    <AssemblyName>CodeGenerator_DataAccess</AssemblyName>
+    <RootNamespace>CodeGeneratorBusiness</RootNamespace>
+    <AssemblyName>CodeGeneratorBusiness</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,7 +32,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,11 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="clsCodeGeneratorData.cs" />
-    <Compile Include="clsDataAccessSettings.cs" />
-    <Compile Include="clsErrorLogger.cs" />
-    <Compile Include="clsLogHandler.cs" />
+    <Compile Include="clsCodeGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CodeGeneratorDataAccess\CodeGeneratorDataAccess.csproj">
+      <Project>{704b5107-280e-42f3-be08-50759a98f090}</Project>
+      <Name>CodeGeneratorDataAccess</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
