--- a/CodeGeneratorDataAccess/CodeGeneratorDataAccess.csproj
+++ b/CodeGeneratorDataAccess/CodeGeneratorDataAccess.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1EE78A04-06F0-4000-9FE5-49F1F832657B}</ProjectGuid>
+    <ProjectGuid>{704B5107-280E-42F3-BE08-50759A98F090}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CodeGenerator_Business</RootNamespace>
-    <AssemblyName>CodeGenerator_Business</AssemblyName>
+    <RootNamespace>CodeGeneratorDataAccess</RootNamespace>
+    <AssemblyName>CodeGeneratorDataAccess</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,14 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="clsCodeGenerator.cs" />
+    <Compile Include="clsCodeGeneratorData.cs" />
+    <Compile Include="clsDataAccessSettings.cs" />
+    <Compile Include="clsErrorLogger.cs" />
+    <Compile Include="clsLogHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CodeGenerator_DataAccess\CodeGenerator_DataAccess.csproj">
-      <Project>{704b5107-280e-42f3-be08-50759a98f090}</Project>
-      <Name>CodeGenerator_DataAccess</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
