UPD Generate Business Layer to Include all Data Types For Mapping

--- a/CodeGenerator/CodeGeneratorDesktopUI.csproj
+++ b/CodeGenerator/CodeGeneratorDesktopUI.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{AEB31FCD-17C3-41EE-8102-F6C449A50547}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Code_Generator</RootNamespace>
-    <AssemblyName>Code Generator</AssemblyName>
+    <RootNamespace>CodeGenerator</RootNamespace>
+    <AssemblyName>CodeGenerator</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\SqlDbTypeExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="frmCodeGenerator.cs">
       <SubType>Form</SubType>
@@ -75,6 +76,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.manifest" />
     <None Include="packages.config" />
