UPD Generate Data Access Layer
- Extended DAL to include additional data types for mapping,
  enhancing flexibility.
- Refactored filtering logic to use delegates, reducing code
  redundancy and improving maintainability.
- Updated relevant unit tests to reflect these changes.

--- a/GenerateDataAccessLayerLibrary/GenerateDataAccessLayerLibrary.csproj
+++ b/GenerateDataAccessLayerLibrary/GenerateDataAccessLayerLibrary.csproj
@@ -44,6 +44,8 @@
     <Compile Include="clsGenerateDataAccessLayer.cs" />
     <Compile Include="clsColumnInfoForDataAccess.cs" />
     <Compile Include="clsGenerateHelperClasses.cs" />
+    <Compile Include="clsSqlDbTypeToCSharpTypeMapper.cs" />
+    <Compile Include="Extensions\SqlDbTypeExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
