Refactor codebase to use common library for shared components
- Created a new `CommonLibrary` to hold shared classes, functions, and extension methods, reducing code duplication across the project.
- Moved common code from `DataAccessLayerLibrary`, `BusinessLayerLibrary`, `StoredProcedureLibrary`, and `AppConfigFileLibrary` into the new `CommonLibrary`.
- Updated all existing class libraries to reference the `CommonLibrary`, ensuring consistent use of common components and simplifying maintenance.
- Rebuilt and tested the solution to ensure functionality and stability after the refactoring.

--- a/CodeGenerator/CodeGeneratorDesktopUI.csproj
+++ b/CodeGenerator/CodeGeneratorDesktopUI.csproj
@@ -98,6 +98,10 @@
       <Project>{1ee78a04-06f0-4000-9fe5-49f1f832657b}</Project>
       <Name>CodeGeneratorBusiness</Name>
     </ProjectReference>
+    <ProjectReference Include="..\CommonLibrary\CommonLibrary.csproj">
+      <Project>{06e86b6a-0420-41eb-b323-b6127350846e}</Project>
+      <Name>CommonLibrary</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GenerateAppConfigFileLibrary\GenerateAppConfigFileLibrary.csproj">
       <Project>{327f0837-03be-4512-adef-6714caf887ef}</Project>
       <Name>GenerateAppConfigFileLibrary</Name>
