--- a/GenerateAppConfigFileLibrary/GenerateAppConfigFileLibrary.csproj
+++ b/GenerateAppConfigFileLibrary/GenerateAppConfigFileLibrary.csproj
@@ -44,5 +44,11 @@
     <Compile Include="clsGenerateAppConfigFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CommonLibrary\CommonLibrary.csproj">
+      <Project>{06e86b6a-0420-41eb-b323-b6127350846e}</Project>
+      <Name>CommonLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
